--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 build_html = "2.4.0"
+debug_panic = "0.2.1"
 lazy_static = "1.4.0"
 rocket = "0.5.0-rc.1"
 serde = "1.0.160"
